name:                phook
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aktowns/phook#readme
license:             BSD3
license-file:        LICENSE
author:              Ashley Towns
maintainer:          mail@ashleytowns.id.au
copyright:           Ashley Towns
category:            Web
build-type:          Configure
extra-source-files:  configure
extra-tmp-files:     phook.buildinfo
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , monad-loops
                     , unix
  c-sources:           stub.c
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aktowns/phook
